More small fix + added filename + todos about quota checks lol